Thank you page not centered #63 - cleaned up Thank You, Error and 404, all now consistent - vertically centered correctly

--- a/_src/assets/css/custom.scss
+++ b/_src/assets/css/custom.scss
@@ -15,10 +15,6 @@
   top: 0;
   background: #eee;
 }
-.error {
-  min-height: 50vh;
-  padding-top: 100px;
-}
 /* .form-control:required:valid {
   border: 2px solid lightgreen;
 }
@@ -67,17 +63,4 @@
 }
 .opacity-9 {
   opacity:0.9!important;
-}
-
-.shame__container--special {
-  margin: 10px auto;
-  max-width: 600px;
-  text-align: center;
-}
-
-.shame__h1--special {
-  margin: 30px 0;
-  font-size: 4em;
-  line-height: 1;
-  letter-spacing: -1px;
 }
